# bazel-sandbox-python

./: Dockerfile  LICENSE  README.md
src/: BUILD.bazel  MODULE.bazel
